--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://aniruddha662003:zEbGVBuQhCt1DJ0l@crowdfarming.007uq.mongodb.net/crowdfarming?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://aniruddha662003:zEbGVBuQhCt1DJ0l@crowdfarming.007uq.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET=superNii
 PORT=5000
