--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "razorpay": "^2.9.5"
   }
 }
