--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.7",
+    "framer-motion": "^12.4.7",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0",
