--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.7",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
