--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.9"
   },
