--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.7",
     "cloudinary": "^2.6.0",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "lucide-react": "^0.477.0",
