--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 MONGO_URI=mongodb+srv://aniruddha662003:zEbGVBuQhCt1DJ0l@crowdfarming.007uq.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET=superNii
 PORT=5000
+
+# Cloudinary Credentials (get these from your Cloudinary dashboard)
+CLOUDINARY_CLOUD_NAME=duz18zmq0
+CLOUDINARY_API_KEY=396247895111179
+CLOUDINARY_API_SECRET=lgi9nLxOZs3FoFv2Kh9lPfFlz6M
