adding payment getway to the campaign

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ PORT=5000
 CLOUDINARY_CLOUD_NAME=duz18zmq0
 CLOUDINARY_API_KEY=396247895111179
 CLOUDINARY_API_SECRET=lgi9nLxOZs3FoFv2Kh9lPfFlz6M
+
+RAZORPAY_KEY_ID=rzp_test_tRT25JXIPqrKtZ
+RAZORPAY_KEY_SECRET=fGhFWdKiceZBAdL2NBMVjyK6
