--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^13.2.0",
@@ -23,6 +24,6 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.6"
   }
 }
